yamls/appstore/appstore-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: appstore-gateway
  namespace: test-appstore
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: appstore
  namespace: test-appstore
spec:
  gateways:
  - appstore-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /appfront
    route:
    - destination:
        host: appfront
        port:
          number: 9080
---
